HTMLVideoElement: PaintCurrentFrame: default to SkBlendMode::kSrc

Bug: 912842
Change-Id: I847e62edc50ccdf8d488843a8c4b7d04fd77b0c2
Reviewed-on: https://chromium-review.googlesource.com/c/1370499
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Kai Ninomiya <kainino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615635}
Former-commit-id: 9d36bd3836883b3cbe7b51f3efba28956f4a976d